Refactor: changed project name to gol_refactor