@@ -1,6 +1,13 @@
-/*
- * This file was generated by the Gradle 'init' task.
- */
+buildscript {
+    ext.kotlin_version = '1.3.50'
+    dependencies {
+        classpath 'org.owasp:dependency-check-gradle:5.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+    repositories {
+        mavenCentral()
+    }
+}
 
 plugins {
     id 'java'
@@ -8,16 +15,28 @@ plugins {
 }
 
 repositories {
+    mavenCentral()
     mavenLocal()
     maven {
-        url = 'https://artylab.expedia.biz:443/public-maven-virtual/'
+        url = 'http://repo.maven.apache.org/maven2'
+    }
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+    each {
+//        it.options.compilerArgs.add('--enable-preview')
     }
 }
 
 dependencies {
     compile 'org.apache.commons:commons-collections4:4.1'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile 'junit:junit:4.12'
 }
+
+apply plugin: 'org.owasp.dependencycheck'
+apply plugin: 'kotlin'
 
 group = 'com.expedia.www'
 version = '1.0-SNAPSHOT'
@@ -29,4 +48,34 @@ publishing {
             from(components.java)
         }
     }
+}
+
+test {
+//    jvmArgs '--enable-preview'
+    testLogging {
+        showStandardStreams = true
+    }
+}
+jar {
+    manifest {
+        attributes "Main-Class": "com.expedia.cloud.tools.CloudCostSummary"
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "11"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "11"
+    }
+}
+sourceSets {
+    main.java.srcDirs += 'src/main/kotlin/'
+    test.java.srcDirs += 'src/test/kotlin/'
 }
